SSCSFT-70 Fix the bug where the DWP response date is incorrect for appeal-received notifications